--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -18,7 +18,7 @@ jobs:
   triage:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/labeler@v4
+    - uses: github/issue-labeler@v3.1 #May not be the latest version
       with:
         configuration-path: .github/labeler.yml
         enable-versioned-regex: 0
